if WITH_EPIPHANY
EPIPHANY_DIR = epiphany
else
EPIPHANY_DIR = 
endif

if WITH_GEDIT
GEDIT_DIR = gedit
else
GEDIT_DIR = 
endif

if WITH_NAUTILUS_EXT
NAUTILUS_EXT_DIR = nautilus-ext
else
NAUTILUS_EXT_DIR = 
endif

if WITH_APPLET
APPLET_DIR = applet
else
APPLET_DIR =
endif

SUBDIRS = nautilus $(APPLET_DIR) $(EPIPHANY_DIR) $(GEDIT_DIR) $(NAUTILUS_EXT_DIR)
